Fixed bullet point alignment

--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -42,7 +42,7 @@
 }
 
 .timeline .separator_padding {
-    padding: 10px !important;
+    padding-left: 18px !important;
 }
 
 .timeline .timeline_content {
